; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/shimgvw/extr_shimgvw.c_Anime_SetFrameIndex.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/shimgvw/extr_shimgvw.c_Anime_SetFrameIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@m_nFrameCount = common dso_local global i64 0, align 8
@FrameDimensionTime = common dso_local global i32 0, align 4
@Ok = common dso_local global i64 0, align 8
@image = common dso_local global i32 0, align 4
@FrameDimensionPage = common dso_local global i32 0, align 4
@m_nFrameIndex = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @Anime_SetFrameIndex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Anime_SetFrameIndex(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @m_nFrameCount, align 8
  %6 = icmp slt i64 %4, %5
  br i1 %6, label %7, label %20

7:                                                ; preds = %1
  %8 = load i32, i32* @FrameDimensionTime, align 4
  store i32 %8, i32* %3, align 4
  %9 = load i64, i64* @Ok, align 8
  %10 = load i32, i32* @image, align 4
  %11 = load i64, i64* %2, align 8
  %12 = call i64 @GdipImageSelectActiveFrame(i32 %10, i32* %3, i64 %11)
  %13 = icmp ne i64 %9, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %7
  %15 = load i32, i32* @FrameDimensionPage, align 4
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* @image, align 4
  %17 = load i64, i64* %2, align 8
  %18 = call i64 @GdipImageSelectActiveFrame(i32 %16, i32* %3, i64 %17)
  br label %19

19:                                               ; preds = %14, %7
  br label %20

20:                                               ; preds = %19, %1
  %21 = load i64, i64* %2, align 8
  store i64 %21, i64* @m_nFrameIndex, align 8
  ret void
}

declare dso_local i64 @GdipImageSelectActiveFrame(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
